--- a/demo.html
+++ b/demo.html
@@ -2,32 +2,33 @@
 <html>
 <head>
 	<title>My Bio</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+
+<header>
 	<h1>Student Bio</h1>
+</header>
 
-	<br>
+<div class="container">
+	<div id="bio-image">
+		<h2>Chris Volonnino</h2>
+		<img src="njdevils.png" height= "200" width="200" alt="New Jersey Devils" />
+	</div> <!-- end bio image -->
 
-	<h3>Chris Volonnino</h3>
+	<div id="main-bio">
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dui purus, consequat at est eget, euismod aliquam mi. Vivamus diam lorem, commodo egestas porta condimentum, imperdiet pulvinar lorem. Aenean et leo lobortis, tempus massa eu, efficitur urna. Proin nisl nunc, mollis sed vulputate in, elementum eu orci. Nam nec magna a nisi ultrices tincidunt vel sit amet ipsum. Pellentesque porta hendrerit erat, vitae pretium leo semper id. Donec elementum sodales metus, rhoncus ullamcorper metus tincidunt ac. Vivamus fringilla lacus vitae orci mattis tempor. Nam nec finibus purus, ut feugiat neque.</p>
+	</div> <!-- main bio -->
 
-	<br>
-
-	<img src="njdevils.png" height= "100px" width="100px" alt="New Jersey Devils" />
-
-	<br>
-
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dui purus, consequat at est eget, euismod aliquam mi. Vivamus diam lorem, commodo egestas porta condimentum, imperdiet pulvinar lorem. Aenean et leo lobortis, tempus massa eu, efficitur urna. Proin nisl nunc, mollis sed vulputate in, elementum eu orci. Nam nec magna a nisi ultrices tincidunt vel sit amet ipsum. Pellentesque porta hendrerit erat, vitae pretium leo semper id. Donec elementum sodales metus, rhoncus ullamcorper metus tincidunt ac. Vivamus fringilla lacus vitae orci mattis tempor. Nam nec finibus purus, ut feugiat neque.</p>
-
-	<br>
-
-	<h3>Contact Info</h3>
-
-	<br>
-
-	<li>Email: <a href="chris.volonnino@gmail.com">chris.volonnino@gmail.com</a></li>
-	<li>GitHub: <a href="www.github.com">cvols GitHub</a></li>
-	<li>Portfolio: <a href="#">cvols Portfolio Coming Soon</a></li>
-
+	<div id="contact-info">
+		<h2>Contact Info</h2>
+		<ul>
+			<li>Email: <a href="chris.volonnino@gmail.com">chris.volonnino@gmail.com</a></li>
+			<li>GitHub: <a href="https://www.github.com" target="_blank">cvols GitHub</a></li>
+			<li>Portfolio: <a href="#">cvols Portfolio Coming Soon</a></li>
+		</ul> 
+	</div> <!-- end contact info -->
+</div> <!-- end container -->
 
 
 </body>
